tests/resource/valid/class/top_level_unassigned_but_nullable.mamba
class X
    def y: Int?

    def __init__(self) =>
        print("No assignments here!")
