tests/resource/invalid/type/class/args_and_init.mamba
class MyClass(arg1: SomeType)
    def __init__(self) => print("cannot have two constructors")
